<resources>
    <string name="app_name" translatable="false">FritzTempViewer</string>
    <string name="save">Save</string>
    <string name="server_uri">server uri</string>
    <string name="test">test</string>
    <string name="title_activity_main" translatable="false">FritzTempViewer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">FritzTempViewer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_additional_info">%d entries</string>
    <string name="raw_chart">Raw Chart</string>
    <string name="min_max_chart">Min/Max Chart</string>
    <string name="additional_info">Additional Info</string>
    <string name="refresh_charts">Refresh Charts</string>
    <string name="sensor">Sensor</string>
    <string name="interval">Interval</string>
    <string name="reset">Reset</string>
    <string name="config">Config</string>
    <string name="status">Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="status_text">Temperature: %.1f°C\nLowest - Highest today: %.1f°C - %.1f°C\n%d database entries\nOldest entry: %s\nYoungest entry: %s</string>
    <string name="save_database_to_file">Save database to file</string>
    <string name="saved_database_to_">saved database to %s</string>
</resources>
