<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_charts"
        android:checkableBehavior="single"
        android:enabled="true"
        android:visible="true">
        <item
            android:id="@+id/nav_status"
            android:checked="true"
            android:icon="@drawable/ic_speaker_notes_black_24dp"
            android:title="@string/status" />
        <item
            android:id="@+id/nav_raw_chart"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/raw_chart" />
        <item
            android:id="@+id/nav_min_max_chart"
            android:icon="@drawable/ic_unfold_more_black_24dp"
            android:title="@string/min_max_chart" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/config" />
    </group>
</menu>
